<package format="3">
  <name>parameters_test</name>
  <version>0.0.1</version>
  <author>David Vargas</author>
  <maintainer email="david.vargas@urjc.es">David Vargas</maintainer>
  <description>
     This is a parameters test.
  </description>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- message_generation renamed in ROS 2 to rosidl_default_generators-->
  <depend>rosidl_default_generators</depend>
  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>mocap4ros_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
